# cadencii_sinsy_plugin

./: .gitmodules  COPYING  Makefile.am  README  cadencii_sinsy_plugin.pro  configure  configure.ac
plugin/: ConverterFactory.cpp  ConverterFactory.hpp  DictionaryLoader.cpp  DictionaryLoader.hpp  Makefile.am  SinsySession.cpp  SinsySession.hpp  SinsySingingSynthesizer.cpp  SinsySingingSynthesizer.hpp  main.cpp
refs/: hts-engine.pro
src/lib/: Makefile.am
src/lib/converter/: ConfManager.cpp  ConfManager.h  Converter.cpp  Converter.h
src/lib/hts_engine_API/: HtsEngine.h
src/lib/japanese/: JConf.cpp  JConf.h
src/lib/util/: Configurations.cpp  Configurations.h  MacronTable.cpp  MacronTable.h  MultibyteCharRange.cpp  PhonemeTable.cpp  PhonemeTable.h  util_types.h
test/: Makefile.am  SinsySessionTest.cpp  SinsySingingSynthesizerTest.cpp  cadencii_sinsy_plugin_test.pro
test/stub/: ScoreProviderStub.hpp  ScoreWritableStub.hpp
tool/: Makefile.am  file_to_source.cpp
